--- a/introduction/package.json
+++ b/introduction/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "introduction",
+  "name": "redux-intro",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
-  "module": "main.js",
+  "main": "webpack.config.js",
   "dependencies": {
     "esm": "^3.2.23",
     "redux": "^4.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@webpack-cli/init": "^0.1.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "file-loader": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.0"
+  },
   "scripts": {
+    "build": "webpack",
+    "build-dev": "webpack -d --mode development",
+    "build-prod": "webpack -p --mode production",
+    "console": "node dist/bundle.js",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Raman Maksimčuk",
   "license": "ISC"
 }
