--- a/introduction/package.json
+++ b/introduction/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "file-loader": "^3.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
