--- a/basic-tutorial/package.json
+++ b/basic-tutorial/package.json
@@ -5,6 +5,7 @@
   "module": "main.js",
   "dependencies": {
     "esm": "^3.2.25",
+    "react-redux": "^7.0.3",
     "redux": "^4.0.1"
   },
   "devDependencies": {
