--- a/basic-tutorial/package.json
+++ b/basic-tutorial/package.json
@@ -1,21 +1,31 @@
 {
   "name": "redux-basic-tutorial",
   "version": "1.0.0",
+  "private": true,
   "main": "webpack.config.js",
   "module": "main.js",
   "dependencies": {
     "esm": "^3.2.25",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "node-sass": "^4.12.0",
+    "prettier": "1.17.1",
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -29,7 +39,9 @@
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production",
     "console": "node public/bundle.js",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open --mode development",
+    "format": "prettier --write \"src/**/*.js\"",
+    "eslint-fix": "eslint --fix \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
